implemented sending of email for signup and credentials

--- a/.env
+++ b/.env
@@ -33,3 +33,6 @@ EMAIL_PORT=587
 EMAIL_HOST_USER='satoshi@mangoflights.net'
 EMAIL_HOST_PASSWORD='Changelater@01'
 DEFAULT_FROM_EMAIL='services@mangoflights.net'
+
+# bank_keys
+PRIVATE_PAYSTACK_KEY='sk_test_3d391d0ed500e3ca210c9f6326413ade65446536'
